# Alkemart4/packages/api-spec/openapi.yaml
@@ -1471,6 +1471,15 @@ components:
           type: string
         availability:
           $ref: "#/components/schemas/SellerAvailability"
+        description:
+          type: string
+          nullable: true
+        logo:
+          type: string
+          nullable: true
+        banner:
+          type: string
+          nullable: true
 
     SellerAvailability:
       type: object
